@@ -52,7 +52,7 @@ public class DefaultIT {
     @Test
     public void emptyStringPropertyHasCorrectDefaultValue() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getEmptyStringWithDefault");
 
@@ -63,7 +63,7 @@ public class DefaultIT {
     @Test
     public void stringPropertyHasCorrectDefaultValue() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getStringWithDefault");
 
@@ -74,7 +74,7 @@ public class DefaultIT {
     @Test
     public void integerPropertyHasCorrectDefaultValue() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getIntegerWithDefault");
 
@@ -88,7 +88,7 @@ public class DefaultIT {
         ClassLoader resultsClassLoader = schemaRule.generateAndCompile("/schema/default/default.json", "com.example", config("useBigIntegers", true));
         Class<?> c = resultsClassLoader.loadClass("com.example.Default");
 
-        Object instance = c.newInstance();
+        Object instance = c.getDeclaredConstructor().newInstance();
         Method getter = c.getMethod("getIntegerWithDefault");
         assertThat((BigInteger) getter.invoke(instance), is(equalTo(new BigInteger("1337"))));
 
@@ -101,7 +101,7 @@ public class DefaultIT {
         ClassLoader resultsClassLoader = schemaRule.generateAndCompile("/schema/default/default.json", "com.example", config("useBigIntegers", true));
         Class<?> c = resultsClassLoader.loadClass("com.example.Default");
 
-        Object instance = c.newInstance();
+        Object instance = c.getDeclaredConstructor().newInstance();
         Class<Enum> enumClass = (Class<Enum>) c.getClassLoader().loadClass("com.example.Default$IntegerEnumWithDefault");
         Method getter = c.getMethod("getIntegerEnumWithDefault");
 
@@ -114,7 +114,7 @@ public class DefaultIT {
     @Test
     public void numberPropertyHasCorrectDefaultValue() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getNumberWithDefault");
 
@@ -128,7 +128,7 @@ public class DefaultIT {
         ClassLoader resultsClassLoader = schemaRule.generateAndCompile("/schema/default/default.json", "com.example", config("useBigDecimals", true));
         Class<?> c = resultsClassLoader.loadClass("com.example.Default");
 
-        Object instance = c.newInstance();
+        Object instance = c.getDeclaredConstructor().newInstance();
         Method getter = c.getMethod("getNumberWithDefault");
         assertThat((BigDecimal) getter.invoke(instance), is(equalTo(new BigDecimal("1.337"))));
 
@@ -141,7 +141,7 @@ public class DefaultIT {
         ClassLoader resultsClassLoader = schemaRule.generateAndCompile("/schema/default/default.json", "com.example", config("useBigDecimals", true));
         Class<?> c = resultsClassLoader.loadClass("com.example.Default");
 
-        Object instance = c.newInstance();
+        Object instance = c.getDeclaredConstructor().newInstance();
         Class<Enum> enumClass = (Class<Enum>) c.getClassLoader().loadClass("com.example.Default$NumberEnumWithDefault");
         Method getter = c.getMethod("getNumberEnumWithDefault");
 
@@ -154,7 +154,7 @@ public class DefaultIT {
     @Test
     public void booleanPropertyHasCorrectDefaultValue() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getBooleanWithDefault");
 
@@ -165,7 +165,7 @@ public class DefaultIT {
     @Test
     public void dateTimeAsMillisecPropertyHasCorrectDefaultValue() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getDateTimeWithDefault");
 
@@ -176,7 +176,7 @@ public class DefaultIT {
     @Test
     public void dateTimeAsStringPropertyHasCorrectDefaultValue() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getDateTimeAsStringWithDefault");
 
@@ -187,7 +187,7 @@ public class DefaultIT {
     @Test
     public void utcmillisecPropertyHasCorrectDefaultValue() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getUtcmillisecWithDefault");
 
@@ -198,7 +198,7 @@ public class DefaultIT {
     @Test
     public void uriPropertyHasCorrectDefaultValue() throws Exception {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
         Method getter = classWithDefaults.getMethod("getUriWithDefault");
         assertThat((URI) getter.invoke(instance), is(URI.create("http://example.com")));
 
@@ -208,7 +208,7 @@ public class DefaultIT {
     @SuppressWarnings({ "unchecked", "rawtypes" })
     public void enumPropertyHasCorrectDefaultValue() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException, ClassNotFoundException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Class<Enum> enumClass = (Class<Enum>) classWithDefaults.getClassLoader().loadClass("com.example.Default$EnumWithDefault");
 
@@ -222,7 +222,7 @@ public class DefaultIT {
     @SuppressWarnings({ "unchecked", "rawtypes" })
     public void integerEnumPropertyHasCorrectDefaultValue() throws Exception {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
         Class<Enum> enumClass = (Class<Enum>) classWithDefaults.getClassLoader().loadClass("com.example.Default$IntegerEnumWithDefault");
         Method getter = classWithDefaults.getMethod("getIntegerEnumWithDefault");
 
@@ -236,7 +236,7 @@ public class DefaultIT {
     @SuppressWarnings({ "unchecked", "rawtypes" })
     public void numberEnumPropertyHasCorrectDefaultValue() throws Exception {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
         Class<Enum> enumClass = (Class<Enum>) classWithDefaults.getClassLoader().loadClass("com.example.Default$NumberEnumWithDefault");
         Method getter = classWithDefaults.getMethod("getNumberEnumWithDefault");
 
@@ -249,7 +249,7 @@ public class DefaultIT {
     @Test
     public void complexPropertyHasCorrectDefaultValue() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getComplexPropertyWithDefault");
 
@@ -260,7 +260,7 @@ public class DefaultIT {
     @Test
     public void simplePropertyCanHaveNullDefaultValue() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getSimplePropertyWithNullDefault");
 
@@ -271,7 +271,7 @@ public class DefaultIT {
     @Test
     public void arrayPropertyCanHaveNullDefaultValue() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getArrayPropertyWithNullDefault");
 
@@ -283,7 +283,7 @@ public class DefaultIT {
     @SuppressWarnings("unchecked")
     public void arrayPropertyHasCorrectDefaultValue() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getArrayWithDefault");
 
@@ -305,7 +305,7 @@ public class DefaultIT {
     @SuppressWarnings("unchecked")
     public void arrayPropertyHasCorrectDefaultUriValues() throws Exception {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
         Method getter = classWithDefaults.getMethod("getArrayWithUriDefault");
         assertThat(getter.invoke(instance), is(instanceOf(List.class)));
 
@@ -324,7 +324,7 @@ public class DefaultIT {
     @SuppressWarnings("unchecked")
     public void arrayPropertyCanHaveEmptyDefaultArray() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getArrayWithEmptyDefault");
 
@@ -343,7 +343,7 @@ public class DefaultIT {
     @SuppressWarnings("unchecked")
     public void uniqueArrayPropertyHasCorrectDefaultValue() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getUniqueArrayWithDefault");
 
@@ -366,7 +366,7 @@ public class DefaultIT {
     @SuppressWarnings("unchecked")
     public void arrayPropertyWithoutDefaultIsEmptyList() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getArrayWithoutDefault");
 
@@ -385,7 +385,7 @@ public class DefaultIT {
     @SuppressWarnings("unchecked")
     public void uniqueArrayPropertyWithoutDefaultIsEmptySet() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException {
 
-        Object instance = classWithDefaults.newInstance();
+        Object instance = classWithDefaults.getDeclaredConstructor().newInstance();
 
         Method getter = classWithDefaults.getMethod("getUniqueArrayWithoutDefault");
 
